[project]
name = "hg_oap"
version = "0.1.13"
description = "A library to faciliate building order and pricing strategies"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Howard Henson", email="howard@henson.me.uk"},
    { name = "Alexander Balabin", email = "balabin@me.com" },
    { name = "Simon Young", email = "whepstead@gmail.com" },
    { name = "Tope Olukemi", email = "tolukemi@gmail.com" }
]
keywords = [
    "reactive", "graph", "fpg", "forward propogating graph", "time series", "functional reactive programming",
    "order", "pricing", "oms"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
]
requires-python = ">=3.12"
dependencies = [
    "hgraph[web]>=0.5.9",
    "holidays >=0.56"
]

[project.urls]
Homepage = "https://github.com/hhenson/hg_oap"
Documentation = "https://hhenson.readthedocs.io"
Repository = "https://github.com/hhenson/hg_oap.git"
Issues = "https://github.com/hhenson/hg_oap/blob/main/ISSUES.md"
Changelog = "https://github.com/hhenson/hg_oap/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/hg_oap"]

[project.optional-dependencies]
docs = [
    "sphinx>=7.4",
    "sphinx_rtd_theme>=2.0.0",
    "sphinx-autodoc-typehints>=2.3.0",
    "sphinxcontrib-plantuml>=0.30",
    "sphinxcontrib-bibtex",
    "pybtex-apa-style==1.3",
]
test = [
    "pytest",
    "mypy",
    "pytest-cov",
    "coverage",
    "pytest-xdist",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


# Configure pytest
[tool.pytest.ini_options]
minversion = "7.4.3"
adopts = "-s" #addopts = "-n 4 -ra -q --dist=loadscope" # " --cov=hgraph --cov-report=term-missing --cov-report=xml"
testpaths = [
    "tests",
]
markers = [
    "serial: mark test to run serially (not in parallel with xdist)",
]

# Configure coverage
[tool.coverage.run]
source_pkgs = ["hg_oap",]
branch = true
parallel = true
omit = [
    "tests/*",
    "examples/*",
    "docs/*",
]

[tool.coverage.paths]
hg = ["src/hg_oap",]
tests = ["tests",]

[tool.coverage.report]
fail_under = 80
exclude_lines = [
    "no cov",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.black]
line-length = 120
target-version = ['py312']
unstable = true
include = '\.pyi?$'
# 'extend-exclude' excludes files or directories in addition to the defaults
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
(
  ^/foo.py    # exclude a file named foo.py in the root of the project
  | .*_pb2.py  # exclude autogenerated Protocol Buffer files anywhere in the project
)
'''

[tool.mypy]
files = ["src",]

[project.scripts]
build-docs = "sphinx.cmd.build:main"